--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>😎 Russel's personal site </title>
+  <title>RickHub</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
   <link rel="icon" href="favicon.ico">
@@ -11,77 +11,70 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
+<nav class="navbar navbar-expand-lg" style="background-color:#FAEEE7;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="https://i.giphy.com/media/g04poZxA1nAyTs9DQY/giphy.webp" alt="" width="64" height="70" class="d-inline-block align-text-top"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <a class="navbar-brand "style="color: #231955; font-family:'Press Start 2P', cursive;font-size:300%;position:absolute;margin-left:75px;margin-top:10px;"> Rickhub</a>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow:0;">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+
+      </ul>
+
+    </div>
+  </div>
+</nav>
 
 <body>
-  <div class="D1" style="background-color:#24A19C;position: fixed;
- left: 0;
- right: 0;
- height: 33.3%; top:0px;">
 
-    <div class="D11 e   row-lg-4 row-md-4 row-6  " style="background-color:#D96098;height:100%;width:33.3%;position:absolute;top:0px;">
-      <h1 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:300%;position:absolute;margin:6.3% 9.9% 6.3% 9.9%;">Sup<br /> Man</h1></div>
-    <div class="D12 e   row-lg-4 row-md-4 row-6 " style="background-color:#8879B0; height:100%;width:33.3%;position:absolute;margin-left:33.3%;top:0px;"><img style=" margin:6.3% 25% 6.3% 25%;height:200px;" src="https://media0.giphy.com/media/xT8qBpSSHOaiGqc7e0/giphy.gif" alt=""></div>
-    <div class="D13 e  row-lg-4 row-md-4 row-6   " style="background-color:#325288;height:100%;width:33.3%;position:absolute;margin-left:66.6%;top:0px;">
-      <h1 style="color: #D96098; font-family: 'Press Start 2P', cursive;font-size:300%;position:absolute;margin:6.3% 9.9% 6.3% 9.9%;">Sup<br /> Man</h1></div>
-
-</div>
-
-<div class="D2" style="background-color:#24A19C;position: fixed;
-left: 0;
-right: 0;
-height: 33.4%; top:33.3%">
+<div class="row"style="background-color#24A19C;height:100%;width:100%;margin:0px;">
 
 
-    <div class="D11 e   row-lg-4 row-md-4 row-6 "
-    style="background-color:;height:100%;width:33.3%;position:absolute;margin-lefttop:33.3%;">
-    <div style="height:30%;width:100%;position:absolute;top:0px;"></div>
-    <div style="height:40%;width:100%;position:absolute;top:33.3%;">
-      <div class="D11 e   row " style="background-color:#24A19C;height:100%;width:30%;position:absolute;margin-right:0px;display:inline-block;"></div>
+    <div class="col-lg-4 col-md-6 " style="background-color:#D96098;height:470px;display:inline-block;">  <h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:13% 0% 6.3% 5%;">“Sometimes<br>science is<br> more art <br>than <br>science.”</h3></div>
+      <div class="col-lg-4 col-md-6 " style="background-color:#8777B0;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media4.giphy.com/media/VDD7VvEsRvJcc/giphy.gif?cid=ecf05e47fs3oetk0m53bs4yuol2sim2xzo0r3xtb1jn8qv0u&rid=giphy.gif&ct=s" alt=""></div>
+        <div class="col-lg-4 col-md-6 " style="background-color:#325288;height:470px;display:inline-block;"><h3 style="color:#D96098; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 7%;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could count <br />on you.”</h3></div>
+        <div class="col-lg-4 col-md-6 " style="background-color:#24A19C;;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media0.giphy.com/media/l0IsHoa4Ygqpu0XQY/giphy.gif?cid=790b76111e1381131de5c6a650a75454ca98bc0e093a2591&rid=giphy.gif&ct=s" alt=""></div>
+          <div class="col-lg-4 col-md-6 " style="background-color:#F5EDDC;height:470px;display:inline-block;"><h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:13% 0% 6.3% 5%;">“Sometimes<br>science is<br> more art <br>than <br>science.”</h3></div>
+            <div class="col-lg-4 col-md-6 " style="background-color:#8777B0;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media4.giphy.com/media/VDD7VvEsRvJcc/giphy.gif?cid=ecf05e47fs3oetk0m53bs4yuol2sim2xzo0r3xtb1jn8qv0u&rid=giphy.gif&ct=s" alt=""></div>
 
-      <div class="D12 e   row  " style="background-color:#24A19C;height:100%;width:40%;position:absolute;margin-left:32%;display:inline-block;"> <img style="   height:70%;position:absolute;" src="https://media1.giphy.com/media/xT8qBgW8yb7NtOBFu0/giphy.gif" alt=""></div>
+              <div class="col-lg-4 col-md-6 " style="background-color:#325288;height:470px;display:inline-block;"><h3 style="color:#D96098;font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 9.9%;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could <br />count <br />on you.”</h3></div>
+                <div class="col-lg-4 col-md-6 " style="background-color:#24A19C;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media0.giphy.com/media/l0IsHoa4Ygqpu0XQY/giphy.gif?cid=790b76111e1381131de5c6a650a75454ca98bc0e093a2591&rid=giphy.gif&ct=s" alt=""></div>
+                  <div class="col-lg-4 col-md-12 " style="background-color:#D96098;height:470px;display:inline-block;text-align: center;"> <h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 7%;text-align: center;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could <br />count <br />on you.”</h3>
+                      <img style=" margin:15% 0% 6.3% 500px;height:250px;" src="https://media2.giphy.com/media/yw8kHMzH3up9YqTFeK/giphy.gif?cid=790b7611njcorqqrgp1aiv3y9mxkv5o7x97amxz73l550x64&rid=giphy.gif&ct=s" alt=""></div>
 
-      <div class="D13 e   row " style="background-color:#24A19C; height:100%;width:30%;position:absolute;margin-left:66.6%;display:inline-block;"></div>
-    </div>
-   <div style="height:30%;width:100%;position:absolute;bottom:0px;"></div>
- </div>
+                  </div>
 
-
-
-
-    <div class="D12 e   row-lg-4 row-md-4 row-6   " style="background-color:#FAEEE7;height:100%;width:33.3%;position:absolute;margin-left:33.3%;">
-      <h1 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:300%;position:absolute;margin:6.3% 9.9% 6.3% 9.9%;">Sup<br /> Man</h1></div>
-    <div class="D13 e   row-lg-4 row-md-4 row-6 " style="background-color:#8879B0; height:100%;width:33.3%;position:absolute;margin-left:66.6%;"><img style=" margin:6.3% 0% 6.3% 25%;height:200px;" src="https://i.giphy.com/media/3o7aDd5SyswjQEAbtK/giphy.webp" alt=""></div>
-</div>
-
-<div class="D3" style="background-color:#24A19C;position: fixed;
-left: 0;
-right: 0;
-height: 33.3%;bottom:0px;">
-
-
-      <div class="D11 e  row-lg-4 row-md-4 row-6   " style="background-color:#325288;height:100%;width:33.3%;position:absolute;margin-leftbottom:0px;">
-        <h1 style="color: #D96098; font-family:'Press Start 2P', cursive;font-size:300%;position:absolute;margin:6.3% 9.9% 6.3% 9.9%;">Sup<br /> Man</h1></div>
-      <div class="D12 e   row-lg-4 row-md-4 row-6 " style=" background-color:; height:100%;width:33.3%;position:absolute;margin-left:33.3%;bottom:0px;"><img style=" margin:6.3% 25% 6.3% 25%;height:200px;" src="https://i.giphy.com/media/26vIfVoRG8NrbjfQQ/200w.webp" alt=""></div>
-      <div class="D13 e  row-lg-4 row-md-4 row-6   " style="background-color:#D96098;height:100%;width:33.3%;position:absolute;margin-left:66.6%;bottom:0px;">
-          <h1 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:300%;position:absolute;margin:6.3% 9.9% 6.3% 9.9%;">Sup<br /> Man</h1></div>
-</div>
-
-      <div class="D4">
 
       </div>
-      <div class="D5">
 
-      </div>
-      <div class="D6">
+      <footer style="
+          margin-bottom: 0px;
+          height: 190px;background-color:#FAEEE7;bottom:0px;
+      ">
 
-      </div>
-      <div class="D7">
 
-      </div>
-      <div class="D8">
+      <div style="text-align: center; padding-top:60px;">
+        <button type="button" class="btn btn-primary btn-lg" style="background-color:#F5EDDC;"><h2  style="color: #325288; font-family: 'Press Start 2P', cursive;">END</h2></button>
 
-      </div>
-      <div class="D9">
 
       </div>
 
