--- a/index.html
+++ b/index.html
@@ -5,19 +5,22 @@
   <meta charset="utf-8">
   <title>RickHub</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg" style="background-color:#FAEEE7;">
+<nav class="navbar navbar-expand-lg" style="background-color:#FAEEE7; position:fixed; width:100%;z-index: 9;">
+
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="https://i.giphy.com/media/g04poZxA1nAyTs9DQY/giphy.webp" alt="" width="64" height="70" class="d-inline-block align-text-top"></a>
+    <a class="navbar-brand" href="#" style="color: #231955; font-family:'Press Start 2P', cursive;font-size:335%;"><img src="https://i.giphy.com/media/g04poZxA1nAyTs9DQY/giphy.webp" alt="" width="60" height="50" class="d-inline-block align-text-top" style="margin-right:10px;">RickHub</a>
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-      <a class="navbar-brand "style="color: #231955; font-family:'Press Start 2P', cursive;font-size:300%;position:absolute;margin-left:75px;margin-top:10px;"> Rickhub</a>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent" style="flex-grow:0;">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -49,16 +52,16 @@
 <div class="row"style="background-color#24A19C;height:100%;width:100%;margin:0px;">
 
 
-    <div class="col-lg-4 col-md-6 " style="background-color:#D96098;height:470px;display:inline-block;">  <h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:13% 0% 6.3% 5%;">“Sometimes<br>science is<br> more art <br>than <br>science.”</h3></div>
-      <div class="col-lg-4 col-md-6 " style="background-color:#8777B0;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media4.giphy.com/media/VDD7VvEsRvJcc/giphy.gif?cid=ecf05e47fs3oetk0m53bs4yuol2sim2xzo0r3xtb1jn8qv0u&rid=giphy.gif&ct=s" alt=""></div>
-        <div class="col-lg-4 col-md-6 " style="background-color:#325288;height:470px;display:inline-block;"><h3 style="color:#D96098; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 7%;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could count <br />on you.”</h3></div>
+    <div class="col-lg-4 col-md-6 " style="background-color:#D96098;height:470px;display:inline-block;">  <h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:13% 0% 6.3% 2%;">“Sometimes<br>science is<br> more art <br>than <br>science.”</h3></div>
+      <div class="col-lg-4 col-md-6 " style="background-color:#8777B0;height:470px;display:inline-block;"><img style=" margin:35% 25% 6.3% 25%;height:200px;" src="https://media4.giphy.com/media/VDD7VvEsRvJcc/giphy.gif?cid=ecf05e47fs3oetk0m53bs4yuol2sim2xzo0r3xtb1jn8qv0u&rid=giphy.gif&ct=s" alt=""></div>
+        <div class="col-lg-4 col-md-6 " style="background-color:#325288;height:470px;display:inline-block;"><h3 style="color:#D96098; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 6%;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could count <br />on you.”</h3></div>
         <div class="col-lg-4 col-md-6 " style="background-color:#24A19C;;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media0.giphy.com/media/l0IsHoa4Ygqpu0XQY/giphy.gif?cid=790b76111e1381131de5c6a650a75454ca98bc0e093a2591&rid=giphy.gif&ct=s" alt=""></div>
-          <div class="col-lg-4 col-md-6 " style="background-color:#F5EDDC;height:470px;display:inline-block;"><h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:13% 0% 6.3% 5%;">“Sometimes<br>science is<br> more art <br>than <br>science.”</h3></div>
+          <div class="col-lg-4 col-md-6 " style="background-color:#F5EDDC;height:470px;display:inline-block;"><h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:13% 0% 6.3% 2%;">“Sometimes<br>science is<br> more art <br>than <br>science.”</h3></div>
             <div class="col-lg-4 col-md-6 " style="background-color:#8777B0;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media4.giphy.com/media/VDD7VvEsRvJcc/giphy.gif?cid=ecf05e47fs3oetk0m53bs4yuol2sim2xzo0r3xtb1jn8qv0u&rid=giphy.gif&ct=s" alt=""></div>
 
-              <div class="col-lg-4 col-md-6 " style="background-color:#325288;height:470px;display:inline-block;"><h3 style="color:#D96098;font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 9.9%;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could <br />count <br />on you.”</h3></div>
+              <div class="col-lg-4 col-md-6 " style="background-color:#325288;height:470px;display:inline-block;"><h3 style="color:#D96098;font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 6%;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could <br />count <br />on you.”</h3></div>
                 <div class="col-lg-4 col-md-6 " style="background-color:#24A19C;height:470px;display:inline-block;"><img style=" margin:23% 25% 6.3% 25%;height:200px;" src="https://media0.giphy.com/media/l0IsHoa4Ygqpu0XQY/giphy.gif?cid=790b76111e1381131de5c6a650a75454ca98bc0e093a2591&rid=giphy.gif&ct=s" alt=""></div>
-                  <div class="col-lg-4 col-md-12 " style="background-color:#D96098;height:470px;display:inline-block;text-align: center;"> <h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 7%;text-align: center;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could <br />count <br />on you.”</h3>
+                  <div class="col-lg-4 col-md-12 " style="background-color:#D96098;height:470px;display:inline-block;text-align: center;"> <h3 style="color: #325288; font-family: 'Press Start 2P', cursive;font-size:200%;position:absolute;margin:10% 9.9% 6.3% 6%;text-align: center;">“Thanks,<br /> Mr.Poopy<br />butthole.<br /> I always <br />could <br />count <br />on you.”</h3>
                       <img style=" margin:15% 0% 6.3% 500px;height:250px;" src="https://media2.giphy.com/media/yw8kHMzH3up9YqTFeK/giphy.gif?cid=790b7611njcorqqrgp1aiv3y9mxkv5o7x97amxz73l550x64&rid=giphy.gif&ct=s" alt=""></div>
 
                   </div>
@@ -73,7 +76,7 @@
 
 
       <div style="text-align: center; padding-top:60px;">
-        <button type="button" class="btn btn-primary btn-lg" style="background-color:#F5EDDC;"><h2  style="color: #325288; font-family: 'Press Start 2P', cursive;">END</h2></button>
+        <button type="button" class="btn btn-primary btn-lg" style="background-color:#F5EDDC;"><h2  style="color: #325288; font-family: 'Press Start 2P', cursive;">  <a class="nav-link active" aria-current="page" href="#">UP</a></h2></button>
 
 
       </div>
